# Kondion-Bayberry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
Kondion_N/: .gitignore
Kondion_N/Debug/: .gitignore  makefile  objects.mk  sources.mk
Kondion_N/cartons/bayberry/: kondion.json  masterscript.js  testmaterial.twm
Kondion_N/cartons/bayberry/shaders/: deferred.frag  defmat.twm  normals.twm  solid_tex.frag
Kondion_N/cartons/bayberry/stock/: untitled.gltf
Kondion_N/cartons/testgame2/: deferred.frag  kondion.json  masterscript.js  solid_col.vert  solid_tex.frag
Kondion_N/cartons/testgame2/materials/: ground.twm
Kondion_N/cartons/testgame2/models/: fanbot.gltf
Kondion_N/cartons/testgame2/tempdebug/: deferred.frag
Kondion_N/src/: FunctionsV8.h  Input.cpp  Kondion.cpp  Kondion.h  KondionMath.cpp  KondionRenderer.cpp  KondionRenderer.h  KondionV8.cpp  KondionWindow.cpp  OKO.cpp  OpenGLRenderer.cpp  PhysicsEngine.cpp  Resources.cpp  V8_Ent_Functions.h  V8_Functions.h  V8_OKO_Functions.h  ktt2.h
Kondion_N/src/kobj/: CPN.cpp  OKO.cpp
Kondion_N/src/opengl/: GL_Kondion.h  GL_Materials.cpp  GL_Renderer.cpp  GL_Resources.cpp  OpenGLRenderer.cpp
src/: Input.cpp  Kondion.cpp  Kondion.h  KondionMath.cpp  KondionWindow.cpp  PhysicsEngine.cpp  Resources.cpp  V8_Functions.h  config.h  config.h.in
src/kobj/: Base.cpp  CPN.cpp  OKO.cpp
src/opengl/: GL_Kondion.h  GL_Renderer.cpp  GL_Resources.cpp
